--- a/client/js/tsconfig.json
+++ b/client/js/tsconfig.json
@@ -5,9 +5,13 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "declaration": true,
+    "outDir": "."
   },
-  "include": "src/**/*.ts",
+  "include": [
+    "src/**/*.ts"
+  ],
   "exclude": [
     "node_modules",
     "tests"
