--- a/client/js/package.json
+++ b/client/js/package.json
@@ -24,6 +24,7 @@
     "@eslint/js": "^9.13.0",
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.13",
+    "antd": "^5.21.4",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
     "globals": "^15.11.0",
